--- a/Django-Back-Recode/requirements.txt
+++ b/Django-Back-Recode/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.3.1
+beautifulsoup4==4.9.3
 Django==3.1.6
+django-bootstrap4==2.3.1
+django-summernote==0.8.11.6
 djangorestframework==3.12.2
 mysqlclient==2.0.3
+Pillow==8.1.0
 pytz==2021.1
+soupsieve==2.2
 sqlparse==0.4.1
