--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.17.0",
     "jquery": "^3.5.1",
     "loadjs": "^4.2.0",
     "react": "^17.0.1",
+    "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
