--- a/back-end/.env
+++ b/back-end/.env
@@ -1,5 +1,5 @@
-MYSQL_HOST=localhost
+MYSQL_HOST=mutirae.ci1vbp70ar3z.us-east-2.rds.amazonaws.com
 MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=recode
-MYSQL_DB=passport
+MYSQL_USER=admin
+MYSQL_PASSWORD=bqjY3M2FS
+MYSQL_DB=mutirae
